---
source: hydroflow_plus_test/src/lib.rs
expression: "reachability.meta_graph().unwrap().to_dot(&Default::default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_stream(roots)", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) source_stream(edges)", shape=invhouse, fillcolor="#88aaff"]
    n6v1 [label="(n6v1) union()", shape=invhouse, fillcolor="#88aaff"]
    n7v1 [label="(n7v1) tee()", shape=house, fillcolor="#ffff88"]
    n8v1 [label="(n8v1) map({\l    use crate::__staged::*;\l    |r| (r, ())\l})\l", shape=house, fillcolor="#ffff88"]
    n10v1 [label="(n10v1) join::<'tick, 'tick>()", shape=invhouse, fillcolor="#88aaff"]
    n12v1 [label="(n12v1) map({\l    use crate::__staged::*;\l    |(_from, (_, to))| to\l})\l", shape=invhouse, fillcolor="#88aaff"]
    n14v1 [label="(n14v1) unique::<'tick>()", shape=house, fillcolor="#ffff88"]
    n15v3 [label="(n15v3) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n16v1 [label="(n16v1) for_each({\l    use crate::__staged::*;\l    let reached_out = reached_out;\l    |v| {\l        reached_out.send(v).unwrap();\l    }\l})\l", shape=house, fillcolor="#ffff88"]
    n6v1 -> n7v1
    n1v1 -> n6v1 [label="0"]
    n12v1 -> n6v1 [label="1"]
    n7v1 -> n8v1
    n8v1 -> n15v3
    n3v1 -> n10v1 [label="1"]
    n10v1 -> n12v1
    n15v3 -> n10v1 [label="0"]
    n7v1 -> n14v1
    n14v1 -> n16v1
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n15v3
        n1v1
        n3v1
        n10v1
        n12v1
        n6v1
        n7v1
        n8v1
        n14v1
        n16v1
        subgraph "cluster_sg_1v1_var_stream_0" {
            label="var stream_0"
            n1v1
        }
        subgraph "cluster_sg_1v1_var_stream_1" {
            label="var stream_1"
            n3v1
        }
        subgraph "cluster_sg_1v1_var_stream_3" {
            label="var stream_3"
            n6v1
            n7v1
        }
        subgraph "cluster_sg_1v1_var_stream_4" {
            label="var stream_4"
            n8v1
        }
        subgraph "cluster_sg_1v1_var_stream_5" {
            label="var stream_5"
            n10v1
        }
        subgraph "cluster_sg_1v1_var_stream_6" {
            label="var stream_6"
            n12v1
        }
        subgraph "cluster_sg_1v1_var_stream_7" {
            label="var stream_7"
            n14v1
        }
        subgraph "cluster_sg_1v1_var_stream_8" {
            label="var stream_8"
            n16v1
        }
    }
}

